@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-06T16:09:24Z",
-  "count_outdated" : 1792,
-  "uniques_outdated" : 118,
-  "count" : 1804,
+  "timestamp" : "2022-08-07T00:46:52Z",
+  "count_outdated" : 1794,
+  "uniques_outdated" : 119,
+  "count" : 1805,
   "uniques" : 127,
   "views" : [
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 1,
